Fix desktop / mobile contrast

--- a/alien-night-theme--theme-switcher.css
+++ b/alien-night-theme--theme-switcher.css
@@ -65,8 +65,12 @@ html.dark .d-editor-button-bar button,
 html.dark .category-list-item h3 a[href],
 html.dark .category-list-item>footer figure,
 html.dark .user-preferences .static,
-html.dark .d-editor-button-bar button {
+html.dark .nav-pills>li>a {
     color: #fff;
+}
+
+html.dark.mobile-view .nav-pills>li>a {
+    color: #222;
 }
 
 html.dark nav.post-controls button.create:hover,
